--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
 
        <br id="veille" class="panel">
         <br>
+    <article>
+    <section>
             <p>
             <h1>VEILLE 1</h1></p>
             <h2>NO SQL</h2>
@@ -234,7 +236,9 @@
             . En effet, NoSQL ne vient pas remplacer les BD relationnelles mais proposer une alternative ou compléter les
             fonctionnalités des SGBDR pour donner des solutions plus intéressantes dans certains contextes.</p>
 
-        </br><h2>Mais pourquoi le NoSQL ?</h2>
+        </br>
+
+    <h2>Mais pourquoi le NoSQL ?</h2>
 
             <p>Le premier besoin fondamental auquel répond NoSQL est la performance.
             En effet, ces dernières années, les géants du Web comme Google et Amazon ont vu leurs besoins en
@@ -303,16 +307,16 @@
             du système clé valeur et c’est la nature ou la structure de la valeur qui diffère.
             </h3></p>
 
-            <p>
-            <h3>la société Floris est leader sur le marché et souhaite proposer de nouveaux service à ça clientel
-                afin de repondre a ses attentes de de la fidéliser.
-                La société Floris souhaite donc dévelloper un site e-commerce.
-                Il vous est demandé de creer 4 pages pour ce site web
-                une page d’acceuil ;
-                une page affichant tout les produits ;
-                une page affichant les produits en promotions ;
-                une page panier.
-                (ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
+    <p><h3>la société Floris est leader sur le marché et souhaite proposer de nouveaux service à ça clientel
+    afin de repondre a ses attentes de de la fidéliser.
+    La société Floris souhaite donc dévelloper un site e-commerce.
+    Il vous est demandé de creer 4 pages pour ce site web
+    une page d’acceuil ;
+    une page affichant tout les produits ;
+    une page affichant les produits en promotions ;
+    une page panier.
+    (ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
+
 
         </section>
         </article>
