--- a/index.html
+++ b/index.html
@@ -223,13 +223,8 @@
 
        <article id="veille" class="panel">
            <header>
-               <h1>
-                   veille
-               </h1>
            </header>
         <section>
-            <p>
-            <h1>VEILLE 1</h1></p>
             <h2>NO SQL</h2>
             <img src="images/nosql.png" height="400" width="800"/>
             <p>
@@ -282,7 +277,7 @@
             un impact important sur le requêtage. En effet, toute l’intelligence portée auparavant par
             les requêtes SQL devra être portée par l’applicatif qui interroge la BD. Néanmoins, la communication
             avec la BD se résumera aux opérations PUT, GET et DELETE. Les solutions les plus connues sont Redis, Riak
-            et Voldemort créé par LinkedIn <a href="https://redis.io/" >lien vers le site de REDIS</a> .</p>
+            et Voldemort créé par LinkedIn <a href="https://redis.io/" class="button">lien vers le site de REDIS</a> .</p>
 
             <p><h3>Orienté colonne</h3> : Ce modèle ressemble à première vue à une table dans un SGBDR à la différence
             qu’avec une BD NoSQL orientée colonne, le nombre de colonnes est dynamique. En effet,
@@ -292,7 +287,7 @@
             des colonnes ayant des valeurs NULL. Comme solutions, on retrouve principalement HBase
             (implémentation Open Source du modèle BigTable publié par Google) ainsi que
             Cassandra (projet Apache qui respecte l’architecture distribuée de Dynamo d’Amazon et le modèle
-            BigTable de Google). <a href="http://cassandra.apache.org/">lien vers le site de CASSANDRA</a></p>
+            BigTable de Google). <a href="http://cassandra.apache.org/" class="button">lien vers le site de CASSANDRA</a></p>
 
             <p><h3>Orienté document</h3> : Ce modèle se base sur le paradigme clé valeur. La
             valeur, dans ce cas, est un document de type JSON ou XML.
@@ -300,12 +295,12 @@
             ensemble d’informations structurées de manière hiérarchique. La même opération dans le monde relationnel
             impliquerait plusieurs jointures. Pour ce modèle, les implémentations les
             plus populaires sont CouchDB d’Apache, RavenDB (destiné aux plateformes .NET/Windows avec
-            la possibilité d’interrogation via LINQ) et MongoDB.<a href="https://www.mongodb.com/fr">lien vers le site de mongo db</a></p>
+            la possibilité d’interrogation via LINQ) et MongoDB.<a href="https://www.mongodb.com/fr" class="button">lien vers le site de mongo db</a></p>
 
             <p><h3>Orienté graphe</h3> : Ce modèle de représentation des données se base sur la théorie des graphes. Il s
             ’appuie sur la notion de noeuds, de relations et de propriétés
             qui leur sont rattachées. Ce modèle facilite la représentation du monde réel, ce qui
-            le rend adapté au traitement des données des réseaux sociaux. La principale solution est Neo4J.<a href="https://www.arangodb.com/">lien vers l site de arangoDB</a></h3>
+            le rend adapté au traitement des données des réseaux sociaux. La principale solution est Neo4J.<a href="https://www.arangodb.com/" class="button">lien vers l site de arangoDB</a></h3>
 
             Les deux mouvements “orienté colonne” et “orienté document” découlent bien
             du système clé valeur et c’est la nature ou la structure de la valeur qui diffère.
