--- a/index.html
+++ b/index.html
@@ -306,15 +306,14 @@
             du système clé valeur et c’est la nature ou la structure de la valeur qui diffère.
             </h3></p>
 
-            <p><h3>la société Floris est leader sur le marché et souhaite proposer de nouveaux service à ça clientel
-            afin de repondre a ses attentes de de la fidéliser.
-            La société Floris souhaite donc dévelloper un site e-commerce.
-            Il vous est demandé de creer 4 pages pour ce site web
-            une page d’acceuil ;
-            une page affichant tout les produits ;
-            une page affichant les produits en promotions ;
-            une page panier.
-            (ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
+            <p><h3>C’est ainsi que les bases de bases de données NoSQL,
+            qui comblent les manques flagrants des bases de données transactionnelles en apportant de nouveaux modèles,
+            plus de flexibilité et de scalabilité, et l’accès à une infrastructure
+            distribuée et en cluster. Dans cette mouvance de fond des bases
+            de données de nouvelle génération, Cassandra, base de données NoSQL open source,
+            rencontre un grand succès tout en offrant un puissant moteur d’optimisation du stockage
+            qui peut servir de base pour des déploiements stratégiques,
+            comme le Big Data et son exploitation par les analytiques, ou encore l’Internet des Objets.</h3></p>
 
         </section>
         </article>
