--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
                             <h1>Back Office</h1>
                             <img src="images/backoffice.png" height="400" width="800"/>
                             <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-                            <iframe src="images/doc(1).pdf" width="500" height="600"
-                                    align="middle"></iframe></div>
+                <a href=images/doc(1).pdf" class="button"> porte-feuille de competence </a>
+                        </span>
+                    </div>
 
                 </div>
                 </span>
@@ -216,7 +217,7 @@
                 <img src="images/PXEscreen.png" height="400" width="800"/>
                 <h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des
                     ordinateurs composant le parcs d'IVSTORE</h2>
-                <iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>
+                <a href=images/doc(1).pdf" class="button"> porte-feuille de competence </a>
 
             </section>
         </article>
