--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <article id="me" class="panel">
             <header>
                 <h1>Lou Bettini</h1>
-                <p>devellopeur en apprentissage</p>
+                <p>developpeur en apprentissage</p>
             </header>
             <a href="#projets" class="jumplink pic">
                 <span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -205,7 +205,7 @@
                             <h1>Back Office</h1>
                             <img src="images/backoffice.png" height="400" width="800"/>
                             <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-                <a href=images/doc(1).pdf" class="button"> porte-feuille de competence </a>
+                            <iframe src="images/doc(1).pdf" width="600" height="600" align="middle"></iframe>
                         </span>
                     </div>
 
@@ -217,7 +217,7 @@
                 <img src="images/PXEscreen.png" height="400" width="800"/>
                 <h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des
                     ordinateurs composant le parcs d'IVSTORE</h2>
-                <a href=images/doc(1).pdf" class="button"> porte-feuille de competence </a>
+                <iframe src="images/doc(1).pdf" width="600" height="600" align="middle"></iframe>
 
             </section>
         </article>
