--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <a href="#me" class="icon fa-home active"><span>Home</span></a>
         <a href="#projets" class="icon fa-folder"><span>Projets</span></a>
         <a href="#entreprise" class="icon fa-folder"><span>entreprise</span></a>
-        <a href="#veille" class="icon fa-folder"><span>Veille</span></a>
+        <a href="#veille" class="icon fa-folder"><span>Veille1</span></a>
+        <a href="#veille2" class="icon fa-folder"><span>Veille2</span></a>
 
 
     </nav>
@@ -318,6 +319,229 @@
 
         </section>
         </article>
+
+        <article id="veille2" class="panel">
+            <header>
+            </header>
+            <section>
+            <p>
+                <h2>NO SQL</h2>
+                <img src="images/nosql.png" height="400" width="800"/>
+                <p>
+                    <h3>
+                <p><h3>Définition</h3>
+
+                Une méthode Agile est une approche itérative et collaborative,
+            capable de prendre en compte les besoins
+            initiaux du client et ceux liés aux évolutions.
+
+                Pourquoi parle-t-on de méthode « Agile » ?
+                Le terme « agile » fait référence à la capacité.
+            </p>
+                </br>
+
+                <h2>Principes de base</h2>
+
+                <p>
+
+                    La méthode Agile se base sur un cycle de développement
+                    qui porte le client au centre. Le client est impliqué dans la réalisation
+                    du début à la fin du projet. Grâce
+                    à la méthode agile le demandeur obtient une meilleure visibilité de la gestion
+                    des travaux qu’avec une méthode classique.
+                    L’implication du client dans le processus permet à l’équipe
+                    d’obtenir un feedback régulier afin d’appliquer directement les changements
+                    nécessaires.
+                    Cette méthode vise à accélérer le développement d’un logiciel. De
+                    plus, elle assure la réalisation d’un logiciel fonctionnel tout au
+                    long de la durée de sa création.
+
+                    Le principe de base consiste à proposer une version minimale du logiciel puis à
+                    intégrer
+                    des fonctionnalités supplémentaires à cette base, par processus itératif.
+                    Le processus itératif regroupe une séquence d’instructions à
+                    répéter autant de
+                    fois que possible, selon le besoin. En ce qui concerne la réalisation d’un logiciel,
+                    les instructions à répéter sont les suivantes :</p>
+
+                <p> Plus de relationnel, mais quelles autres caractéristiques?
+                    Ne plus répondre au modèle relationnel est la caractéristique principale des bases de données
+                    NoSQL. Les bases de données NoSQL répondent aussi au théorème du CAP d’Eric
+                    Brewer qui est plus adapté aux systèmes distribués. Ce théorème
+                    énonce que tout système distribué peut répondre aux contraintes suivantes:</p>
+
+                <p>
+                    <ul>
+                    <li>Les tests unitaires à la fin de chaque itération</li>
+                    <li>Le développement</li>
+                    <li>L’intégration</li>
+                    <li>La relecture et amélioration des codes</li>
+                    </ul>
+                </p>
+
+                <br><h3>La méthode agile nommée Manifeste Agile repose sur quatre grands principes :</h3>
+                    <p>
+                        <ul>
+                        <li>COLLABORATION : Communication et
+                            cohésion d’équipe passent avant les outils et les processus.</li>
+                        <li>EQUIPE : Le privilège de la relation équipe/client
+                            est mis en avant plutôt que la négociation contractuelle.</li>
+                        <li>APPLICATION : Préférer une application bien construite à
+                            une documentation détaillée.</li>
+                        <li>ACCEPTATION : Le choix de l’acceptation du changement et
+                            de la flexibilité au détriment d’un plan rigide.</li>
+        </ul>
+                    </p>
+            <p>
+                <h3>
+            En effet le changement de contexte et les modifications interviennent dans
+            le processus suite aux demandes du client qui feront évoluer le projet
+            plus rapidement.
+            <br>
+            Tous les jours à horaire régulier un « stand up meeting »
+            est réalisé. Lors de ce bref point quotidien d’environs chaque
+            membre de l’équipe va :
+                </h3>
+            </p>
+                <p>
+
+                    <ul>
+                    <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+                </p>
+                <p>
+                <h3>
+                    En effet le changement de contexte et les modifications interviennent dans
+                    le processus suite aux demandes du client qui feront évoluer le projet
+                    plus rapidement.
+                    <br>
+                    Tous les jours à horaire régulier un « stand up meeting »
+                    est réalisé. Lors de ce bref point quotidien d’environs chaque
+                    membre de l’équipe va :
+                </h3>
+                </p>
+                <p>
+
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                </p>
+                <p>
+                <p>
+                <h3>
+                    En effet le changement de contexte et les modifications interviennent dans
+                    le processus suite aux demandes du client qui feront évoluer le projet
+                    plus rapidement.
+                    <br>
+                    Tous les jours à horaire régulier un « stand up meeting »
+                    est réalisé. Lors de ce bref point quotidien d’environs chaque
+                    membre de l’équipe va :
+                </h3>
+                </p>
+                <ul>
+                    <li>relater les faits actuels</li>
+                    <li>partager les actions à prévoir pour le lendemain</li>
+                    <li>exprimer les obstacles rencontrés et les difficultés encourues</li>
+                </ul>
+                </p>
+                <p>
+                <p>
+                <h2>Zoom sur les principales méthodes agiles</h2>
+                <h3>
+                    En effet, lorsque l’on emploie le terme « méthode agile »
+                    au singulier on parle d’un concept. Cependant il
+                    existe plusieurs méthodes agiles
+                    qui se différencient les unes des autres.
+                    <br>
+                    <h3>Scrum</h3>
+                    Aujourd’hui « Scrum » est la méthode agile la plus populaire. Ce terme signifie « mêlée » au rugby. La méthode scrum s’appuie sur des « sprints » qui sont des espaces temps assez courts pouvant aller de quelques heures jusqu’à un mois. Généralement et de préférence un sprint s’étend sur deux semaines. À la fin de chaque sprint, l’équipe présente ce qu’elle a ajouté
+                    au produit. Scrum regroupe trois acteurs :
+                </h3>
+                </p>
+                <p>
+                <ul>
+                    <li>Le Product Owner (ou « Directeur de produit ») : il communique les objectifs premiers des clients et utilisateurs finaux, coordonne l’implication des utilisateurs et des parties prenantes, et se coordonne lui-même avec les autres product owners pour assurer une cohérence.</li>
+                    <li>Le Scrum Master : membre de l’équipe, il a pour but d’optimiser la capacité de production de l’équipe. Pour se faire, le scrum master aide l’équipe à travailler de façon autonome tout en s’améliorant d’avantage.</li>
+                    <li>L’équipe opérationnelle (qui regroupe idéalement moins de dix personnes) : la particularité d’une équipe scrum est qu’elle est dépourvue de toute hiérarchie interne. Une équipe scrum est auto-organisée.</li>
+                </ul>
+                </p>
+                <p>
+                <h2> D’autres termes sont à connaître pour comprendre la méthode scrum:
+            </h2>
+                <p>
+                <ul>
+                    <li> Le product backlog (carnet du produit) : ce document contient les exigences initiales dressées puis hiérarchisées avec le client en début de projet. Néanmoins il va évoluer tout au long de la durée du projet, en fonction des divers besoins du client.</li>
+                    <li>Le Scrum Master : membre de l’équipe, il a pour but d’optimiser la capacité de production de l’équipe. Pour se faire, le scrum master aide l’équipe à travailler de façon autonome tout en s’améliorant d’avantage.</li>
+                    <li>L’équipe opérationnelle (qui regroupe idéalement moins de dix personnes) : la particularité d’une équipe scrum est qu’elle est dépourvue de toute hiérarchie interne. Une équipe scrum est auto-organisée.</li>
+                </ul>
+                </p>
+                <h3>D’autres termes sont à connaître pour comprendre la méthode scrum:</h3>
+                <p>
+                    <ul>
+                    <li>Le product backlog (carnet du produit) : ce document contient les exigences initiales dressées puis hiérarchisées avec le client en début de projet. Néanmoins il va évoluer tout au long de la durée du projet, en fonction des divers besoins du client.</li>
+                    <li>Le product backlog (carnet du produit) : ce document contient les exigences initiales dressées puis hiérarchisées avec le client en début de projet. Néanmoins il va évoluer tout au long de la durée du projet, en fonction des divers besoins du client.</li>
+                    <li>User story : ce terme désigne les fonctionnalités décrites par le client.</li>
+                    <li>La mêlée (scrum) : c’est une réunion d’avancement organisée de manière quotidienne durant le sprint.</li>
+            </ul>
+                <img src="images/methodologie-agile-scrum.png" height="400" width="800"/>
+                </p>
+                <h3>EXtreme Programming (XP) </h3>
+                Cette méthode très réactive destinée à des petits ou moyens projets, permet de réduire les coûts du changement. Dans cette méthode, le client pilote le projet grâce à des cycles itératifs d’une à deux semaines. C’est lui qui choisit les fonctionnalités à implémenter. Il transmet ses exigences à l’équipe sous forme de scénario susceptible d’être implémenté en une itération.
+                Dans la méthode XP l’équipe se décompose en binômes qui revoient régulièrement les codes. On parle de responsabilité collective du code, le but étant que chaque développeur soit capable d’intervenir n’importe où dans la structure interne du logiciel. Auquel s’ajoutent des tests automatisés mis en place afin de vérifier chacune des fonctionnalités demandées par le client et de garantir une bonne qualité du produit.
+                </h3>
+                </p>
+                <p>
+                <ul>
+                    <li>Le Product Owner (ou « Directeur de produit ») : il communique les objectifs premiers des clients et utilisateurs finaux, coordonne l’implication des utilisateurs et des parties prenantes, et se coordonne lui-même avec les autres product owners pour assurer une cohérence.</li>
+                    <li>Le Scrum Master : membre de l’équipe, il a pour but d’optimiser la capacité de production de l’équipe. Pour se faire, le scrum master aide l’équipe à travailler de façon autonome tout en s’améliorant d’avantage.</li>
+                    <li>L’équipe opérationnelle (qui regroupe idéalement moins de dix personnes) : la particularité d’une équipe scrum est qu’elle est dépourvue de toute hiérarchie interne. Une équipe scrum est auto-organisée.</li>
+                </ul>
+                </p>
+                <p>
+                <h2>Rapid Application Development (RAD)
+            </h2>
+                <p>
+                    Cette méthode agile est la plus ancienne de toutes les autres méthodes agiles.
+                    Elle se base sur un cycle de développement allant de 90 à 120 jours, incluant cinq phases, à savoir :
+                </p>
+                <p>
+                <ul>
+                <li>L’initialisation (préparation de l’organisation et plan de communication)    </li>
+                <li>Le cadrage (analyse et expression des exigences)    </li>
+                <li>Le design (conception et modélisation)</li>
+                <li>La construction (réalisation et prototypage qui représentent environ 50% du projet)</li>
+                <li>Le contrôle final de qualité par site pilote</li>
+                </ul>
+
+                <h3>On peut également citer d’autres méthodes agiles comme Rational Unified
+                    Process (RUP), Feature Driven Development (FDD) ou Dynamic systems development method (DSDM).</h3>
+                <h2>Les points forts de la méthode agile</h2>
+                </p>
+
+                <p>
+                <ul>
+                    <li>L’équipe fait peu de hors sujet car cette méthode assure une bonne et constante communication entre le client et l’entreprise   </li>
+                    <li>La documentation est réduite, ainsi l’efficacité en terme de productivité est en augmentation </li>
+                    <li>Une version fonctionnelle du logiciel est livrée fréquemment</li>
+                    <li>La collaboration avec le client s’effectue de façon quotidienne</li>
+                    <li>La recherche constante de l’excellence technique : des tests sont réalisés en continu</li>
+                <li>Le résultat est percevable petit à petit, ce qui permet d’éviter les mauvaises surprises</li>
+                </ul>
+
+                </p>
+
+                <h3>Le résultat est percevable petit à petit, ce qui permet d’éviter les mauvaises surprises</h3>
+
+            </section>
+        </article>
+    </div>
+</div>
     </div>
 </div>
 
