--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <section>
             <p>
                 <h2>NO SQL</h2>
-                <img src="images/nosql.png" height="400" width="800"/>
+                <img src="images/agileimg.jpeg" height="400" width="800"/>
                 <p>
                     <h3>
                 <p><h3>Définition</h3>
@@ -403,15 +403,7 @@
             membre de l’équipe va :
                 </h3>
             </p>
-                <p>
 
-                    <ul>
-                    <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-                </p>
                 <p>
                 <h3>
                     En effet le changement de contexte et les modifications interviennent dans
@@ -425,15 +417,6 @@
                 </p>
                 <p>
 
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-                </p>
-                <p>
-                <p>
                 <h3>
                     En effet le changement de contexte et les modifications interviennent dans
                     le processus suite aux demandes du client qui feront évoluer le projet
