--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             </header>
             <section>
             <p>
-                <h2>NO SQL</h2>
+                <h2>Methode Agile</h2>
                 <img src="images/agileimg.jpeg" height="400" width="800"/>
                 <p>
                     <h3>
