--- a/index.html
+++ b/index.html
@@ -108,30 +108,6 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                    mcd
-                </button>
-
-                <!-- Modal -->
-                <div class="modal fade" id="myModalppe2mcd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="mcdppe2"></h4>
-                            </div>
-                            <div class="modal-body">
-
-                                <iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
-                                        align="middle"></iframe>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <!--<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>-->
                 </br>
                 </br>
@@ -164,7 +140,7 @@
                                 <h4 class="modal-title" id="myModalLabel2"></h4>
                             </div>
                             <div class="modal-body">
-                                <iframe src="images/E4-PPE4%20Bettini(1).pdf" width="500" height="600"
+                                <iframe src="images/PPE4CONTEXTE.pdf" width="500" height="600"
                                         align="middle"></iframe>
                             </div>
                             <div class="modal-footer">
