--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                                 <h4 class="modal-title" id="myModalLabel2"></h4>
                             </div>
                             <div class="modal-body">
-                                <iframe src="images/PPE4CONTEXTE.pdf" width="500" height="600"
-                                        align="middle"></iframe>
+                                <img src="images/PPE4CONTEXTE.pdf" height="400" width="800"/>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
