--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                                 <h4 class="modal-title" id="myModalLabel2"></h4>
                             </div>
                             <div class="modal-body">
-                                <img src="images/PPE4CONTEXTE.pdf" height="400" width="800"/>
+                                <iframe src="images/PPE4CONTEXTE.pdf" width="500" height="600"
+                                        align="middle"></iframe>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
