--- a/index.html
+++ b/index.html
@@ -126,8 +126,30 @@
                 <p>
                 <h3>Domy 59 : Application mobile permettant la géolocalisation des techniciens , la récupération des
                     plannings d’interventions et la gestion de ces interventions </h3></p>
-                <iframe src="images/PPE4CONTEXTE.pdf" width="500" height="600"
-                        align="middle"></iframe>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                    contexte
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel2"></h4>
+                            </div>
+                            <div class="modal-body">
+                                <iframe src="images/doc(1).pdf" width="600" height="600"
+                                        align="middle"></iframe>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </article>
 
@@ -172,6 +194,7 @@
                 <img src="images/PXEscreen.png" height="400" width="800"/>
                 <h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des
                     ordinateurs composant le parcs d'IVSTORE</h2>
+                <iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
 
             </section>
         </article>
