--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                                 <h4 class="modal-title" id="myModalLabel2"></h4>
                             </div>
                             <div class="modal-body">
-                                <iframe src="images/doc(1).pdf" width="600" height="600"
-                                        align="middle"></iframe>
+                       <img src="images/doc(1).pdf" height="400" width="800">
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -182,7 +181,6 @@
                             <h1>Back Office</h1>
                             <img src="images/backoffice.png" height="400" width="800"/>
                             <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-                            <iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
                         </span>
                     </div>
 
