--- a/index.html
+++ b/index.html
@@ -84,8 +84,54 @@
                     une page affichant les produits en promotions ;
                     une page panier.
                     (ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                    contexte
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel"></h4>
+                            </div>
+                            <div class="modal-body">
 
                                 <iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
+                                        align="middle"></iframe>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                    mcd
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModalppe2mcd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="mcdppe2"></h4>
+                            </div>
+                            <div class="modal-body">
+
+                                <iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
+                                        align="middle"></iframe>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!--<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>-->
                 </br>
                 </br>
@@ -104,9 +150,30 @@
                 <p>
                 <h3>Domy 59 : Application mobile permettant la géolocalisation des techniciens , la récupération des
                     plannings d’interventions et la gestion de ces interventions </h3></p>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                    contexte
+                </button>
 
-                       <img src="images/doc(1).pdf" height="400" width="800">
-
+                <!-- Modal -->
+                <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel2"></h4>
+                            </div>
+                            <div class="modal-body">
+                                <iframe src="images/PPE4CONTEXTE.pdf" width="500" height="600"
+                                        align="middle"></iframe>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </article>
 
@@ -139,6 +206,7 @@
                             <h1>Back Office</h1>
                             <img src="images/backoffice.png" height="400" width="800"/>
                             <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
+                            <iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
                         </span>
                     </div>
 
