--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="modal-body">
 
-                                <iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
+                                <iframe name="ppe2" src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
                                         align="middle"></iframe>
                             </div>
                             <div class="modal-footer">
@@ -123,7 +123,7 @@
                             </div>
                             <div class="modal-body">
 
-                                <iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
+                                <iframe name="ppe2" src="images/E4-PPE2%20Bettini.pdf" width="500" height="600"
                                         align="middle"></iframe>
                             </div>
                             <div class="modal-footer">
@@ -164,7 +164,7 @@
                                 <h4 class="modal-title" id="myModalLabel2"></h4>
                             </div>
                             <div class="modal-body">
-                                <iframe src="images/PPE4CONTEXTE.pdf" width="500" height="600"
+                                <iframe name="ppe4" src="images/PPE4CONTEXTE.pdf" width="500" height="600"
                                         align="middle"></iframe>
                             </div>
                             <div class="modal-footer">
