--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     une page panier.
                     (ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
 
-               <a href="images/PPE4CONTEXTE.pdf" >test</a>
+                <a href="images/E4-PPE2%20Bettini.pdf" class="button">contexte</a>
                 <!--<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>-->
                 </br>
                 </br>
@@ -105,6 +105,7 @@
                 <h3>Domy 59 : Application mobile permettant la géolocalisation des techniciens , la récupération des
                     plannings d’interventions et la gestion de ces interventions </h3></p>
 
+                <a href="images/PPE4CONTEXTE.pdf" class="button" >contexte</a>
             </section>
         </article>
 
@@ -137,7 +138,7 @@
                             <h1>Back Office</h1>
                             <img src="images/backoffice.png" height="400" width="800"/>
                             <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-                            <iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
+                                 <a href="images/doc(1).pdf"> class="button">contexte</a>
                         </span>
                     </div>
 
@@ -149,7 +150,7 @@
                 <img src="images/PXEscreen.png" height="400" width="800"/>
                 <h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des
                     ordinateurs composant le parcs d'IVSTORE</h2>
-                <iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
+                <a href="images/doc(1).pdf"> class="button">contexte</a>
 
             </section>
         </article>
