--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     (ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
 
                 <a href="images/E4-PPE2%20Bettini.pdf" class="button">contexte</a>
+                <a href="http://floris.vsilvestre.fr/" class="button">Site FLORIS</a>
                 <!--<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>-->
                 </br>
                 </br>
