--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <h1>Back Office</h1>
                             <img src="images/backoffice.png" height="400" width="800"/>
                             <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-                                 <a href="images/doc(1).pdf" class="button">contexte</a>
+                                 <a href="images/doc(1).pdf" class="button">Porte-feuille de competence</a>
                         </span>
                     </div>
 
@@ -151,7 +151,7 @@
                 <img src="images/PXEscreen.png" height="400" width="800"/>
                 <h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des
                     ordinateurs composant le parcs d'IVSTORE</h2>
-                <a href="images/doc(1).pdf" class="button">contexte</a>
+                <a href="images/doc(1).pdf" class="button">porte-feuille de competence </a>
 
             </section>
         </article>
